# gitchat

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  channel.c  channel.h  cmake_uninstall.cmake  get.c  get.h  git-chat.c  gpg-interface.c  main.c  message.c  message.h  options.c  options.h  publish.c  publish.h  read.c  read.h  usage.c  usage.h
.github/: README.md
.github/workflows/: cmake.yml
ci/: run-build.sh
cmake/: package-centos.cmake  package-debian.cmake  packaging.cmake
cmake/Modules/: FindGPGME.cmake  FindGpgme.cmake
docs/: CMakeLists.txt  git-chat-channel.1  git-chat-config.1  git-chat-import-key.1  git-chat-init.1  git-chat-message.1  git-chat-read.1  git-chat.1
docs/sections/: authors.section  directory-structure.section  reporting-bugs.section
include/: argv-array.h  builtin.h  channel.h  config-defaults.h  decryption.h  encryption.h  fs-utils.h  get.h  git.h  gpg-common.h  gpg-interface.h  key-filter.h  key-manager.h  logging.h  message.h  paging.h  parse-config.h  parse-options.h  progress.h  publish.h  read.h  run-command.h  str-array.h  strbuf.h  usage.h  utils.h  working-tree.h
include/config/: config-data.h  config-defaults.h  config-key.h  node-visitor.h  parse-config.h
include/git/: commit.h  git.h  graph-traversal.h  index.h
include/gnupg/: decryption.h  encryption.h  gpg-common.h  key-filter.h  key-manager.h  key-trust.h
share/templates/: .config  .roomconfig  config
src/: argv-array.c  channel.c  config-defaults.c  fs-utils.c  get.c  git-chat.c  gpg-interface.c  logging.c  main.c  message.c  paging.c  parse-config.c  parse-options.c  progress.c  publish.c  read.c  run-command.c  str-array.c  strbuf.c  usage.c  utils.c  working-tree.c
src/builtin/: channel-create.c  channel-delete.c  channel-list.c  channel-switch.c  channel.c  config.c  get.c  import-key.c  init.c  message.c  publish.c  read.c
src/config/: config-data.c  config-defaults.c  config-key.c  node-visitor.c  parse-config.c
src/git/: commit.c  git.c  graph-traversal.c  index.c
src/gnupg/: decryption.c  encryption.c  gpg-common.c  key-filter.c  key-manager.c  key-trust.c
templates/: version.h.in
test/: CMakeLists.txt  README.md  integration-runner.sh  runner.c  test-lib.c  valgrind.supp
test/include/: test-lib.h  test-suite.h
test/integration/: t001-basic.sh  t002-git-chat-extensions.sh  t003-git-chat-init.sh  t004-git-chat-import-key.sh  t004-git-chat-message.sh  t005-git-chat-config.sh  t006-git-chat-message.sh  t007-git-chat-read.sh  t008-git-chat-channel-create.sh  t009-git-chat-channel-switch.sh  t010-git-chat-channel-delete.sh  t011-git-chat-channel-list.sh  test-lib.sh
test/resources/: .gitconfig  bad_key_1.config  bad_key_2.config  bad_key_3.config  bad_key_4.config  bad_key_5.config  bad_section_1.config  bad_section_2.config  bad_section_3.config  good.config  good_1.config  good_2.config  good_3.config
test/resources/gpgkeys/: ajones_noexpire.gpg  ajones_noexpire.pub.gpg  jdoe_noexpire.gpg  jdoe_noexpire.pub.gpg  test_user.gpg  test_user.pub.gpg
test/unit/: argv-array-test.c  config-data-test.c  config-defaults-test.c  config-key-test.c  fs-utils-test.c  git-commit-parse-test.c  node-visitor-test.c  parse-config-test.c  parse-options-test.c  run-command-test.c  str-array-test.c  strbuf-test.c  usage-test.c
